--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "eslint": "^4.1.1",
     "eslint-config-shortlyster": "^2.2.0"
+  },
+  "dependencies": {
+    "copy-paste": "^1.3.0"
   }
 }
