--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
-    "copy-paste": "^1.3.0"
+    "copy-paste": "^1.3.0",
+    "lodash": "^4.17.4"
   }
 }
