--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "lint": "eslint --fix .",
-    "precommit": "yarn lint"
+    "precommit": "yarn lint",
+    "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "devDependencies": {
     "eslint": "3.19.0",
@@ -19,8 +20,10 @@
     "husky": "^0.14.2"
   },
   "dependencies": {
+    "changelog-verify": "^1.0.4",
     "colors": "^1.1.2",
     "copy-paste": "^1.3.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "version-changelog": "^2.1.0"
   }
 }
