--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "changelog-verify": "^1.0.4",
     "colors": "^1.1.2",
+    "commander": "^2.11.0",
     "copy-paste": "^1.3.0",
     "lodash": "^4.17.4",
+    "mocha-eslint": "^3.0.1",
     "version-changelog": "^2.1.0"
   }
 }
