--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "colors": "^1.1.2",
     "commander": "^2.11.0",
     "copy-paste": "^1.3.0",
+    "dateformat": "^2.0.0",
     "lodash": "^4.17.4"
   }
 }
