--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "month-todo",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Make a markdown monthly todo, given time",
   "main": "index.js",
   "repository": "git@github.com:one19/monthTodo.git",
@@ -16,7 +16,10 @@
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "chai": "^4.0.2",
