--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "version-changelog": "^2.1.0"
   },
   "dependencies": {
+    "clipboardy": "^1.2.3",
     "colors": "^1.1.2",
     "commander": "^2.11.0",
-    "copy-paste": "^1.3.0",
     "dateformat": "^2.0.0",
     "lodash": "^4.17.4"
   }
