--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
-
+sudo: false
 node_js:
+  - '10'
   - '8'
-
+  - '6'
 install:
   - yarn
-
+  - npm i codecov -g
 cache:
   yarn: true
   directories:
     - node_modules
+script:
+  
