--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "lint-staged",
     "prepush": "snyk test && yarn test",
     "test": "mocha",
+    "coverage": "nyc --reporter=html --reporter=text mocha",
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "lint-staged": {
@@ -24,14 +25,18 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "changelog-verify": "^1.0.4",
-    "eslint": "3.19.0",
-    "eslint-config-shortlyster": "^2.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-mocha": "^5.0.0",
     "husky": "^0.14.2",
     "lint-staged": "^4.0.1",
     "mocha": "^3.4.2",
     "mocha-eslint": "^3.0.1",
-    "version-changelog": "^2.1.0",
-    "snyk": "^1.80.1"
+    "nyc": "^11.8.0",
+    "snyk": "^1.80.1",
+    "version-changelog": "^2.1.0"
   },
   "dependencies": {
     "clipboardy": "^1.2.3",
