--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "precommit": "lint-staged",
     "build": "parcel build -o dist/index.js -t node index.js && ./shebang_it.js",
     "prepush": "snyk test && yarn test",
-    "test": "mocha",
-    "coverage": "nyc --reporter=html --reporter=text mocha",
+    "test": "mocha --compilers js:babel-core/register test",
+    "coverage": "nyc --reporter=html --reporter=text mocha --compilers js:babel-core/register test",
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "lint-staged": {
@@ -24,7 +24,10 @@
     ]
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.0.2",
     "changelog-verify": "^1.0.4",
     "eslint": "^4.19.1",
